2.40

Fixup issues with JSON and with non-Padwalker builds (thanks to FC)
various other tweaks and cleanups to build on newer Perls. Updated
meta files, etc.

2.37

Various changes. See github log for changes.

NOTE, I have little time to maintain this package. If a secondary maintainer
wants to step up I would be happy to grant the appropriate permissions so that
new releases do not take so long.

2.36

Er... I forgot to update the changes file for this release.

2.35
Apply patches by Ilmari and D. Steinbrunner.

Should work on 5.18 now.

2.34
Administrative release to eliminate build dependency on module
used only for testing.

2.33
Caught up with various RT reports, and fixed a bunch of them.

[RT #74198] fixed dumps containing read-only objects (obtained via JSON::XS)

[RT #74198], Fixed stringification of code compiled under strict in later
perls. Thanks to Father Chrysotomos for the patch and nudge.

Also eliminated a false-fail prone test which was actually pretty useless,
which should close several tickets which I wont bother to list.

This release also is the first from the new git repository at
https://github.com/demerphq/Data-Dump-Streamer


2.32
Disable overloading in a <=5.8.8 safe way [RT #53700]

2.31
React to Strawberry perl $. strangeness [RT #58528]

2.29
Add .answer to .gitignore
Update t/madness for perl-5.6
Syntax fix print() for perl-5.6
Correct ${^WARNING_BITS} in t/madness.t for perl-5.8.7 and earlier

2.28
Strip illegal regexp modifiers [RT #65355]
Update file permissions

2.27
Test for new regexp /u flag [RT #65339]
Import less private functions
Removed obsolete svn version info

2.26
Keep a glob reference open while inspecting through it with B. [RT #65272]

2.25 (2011-01-24)
Oops, add ppport.h to the packaged distribution

2.24 (2011-01-23)
Fix weakref breakage from perl-5648c0a. [RT #62605]
Add ppport.h
Add .gitignore

2.23 (2011-01-18)
Fix DumpLex for bug #44621

2.22 (2010-07-11)

Build.PL fixed to accept DDS and NODDS again
