@@ -40,7 +40,7 @@ provides:
 recommends:
   Algorithm::Diff: '0'
   Compress::Zlib: '0'
-  JSON::XS: '0'
+  Cpanel::JSON::XS: '0'
   MIME::Base64: '0'
   PadWalker: '0.99'
 requires:
