@@ -1,3 +1,6 @@
+
+Switch from JSON::XS to Cpanel::JSON::XS as an optional test prereq.
+
 2.40
 
 Fixup issues with JSON and with non-Padwalker builds (thanks to FC)
